[gd_scene load_steps=5 format=3 uid="uid://bcvn5y2x4ee7t"]

[ext_resource type="Script" path="res://scenes/moveable_block.gd" id="1_kqjbn"]
[ext_resource type="Texture2D" uid="uid://2wt7dr5eyfao" path="res://textures/block_1.png" id="2_to5lw"]
[ext_resource type="Texture2D" uid="uid://bfinwub2i3bjh" path="res://textures/block_invis.png" id="3_v672g"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_3s8wj"]
size = Vector2(16, 16)

[node name="PushableBlockBody" type="AnimatableBody2D" groups=["pushable_obj"]]
position = Vector2(-34, 42)
disable_mode = 2
collision_layer = 4
collision_mask = 15
sync_to_physics = false
script = ExtResource("1_kqjbn")

[node name="BlockCollision" type="CollisionShape2D" parent="."]
scale = Vector2(0.9, 0.9)
shape = SubResource("RectangleShape2D_3s8wj")
one_way_collision_margin = 0.0

[node name="BlockSprite" type="Sprite2D" parent="."]
texture = ExtResource("2_to5lw")

[node name="BlockInvisSprite" type="Sprite2D" parent="."]
visible = false
texture = ExtResource("3_v672g")

[node name="PushTimer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="ConfirmPushTimer" type="Timer" parent="."]
wait_time = 0.3
one_shot = true

[node name="BlockCheckUp" type="RayCast2D" parent="."]
target_position = Vector2(0, -11)
collision_mask = 4
hit_from_inside = true

[node name="BlockCheckRight" type="RayCast2D" parent="."]
target_position = Vector2(9, 0)
collision_mask = 4
hit_from_inside = true

[node name="BlockCheckLeft" type="RayCast2D" parent="."]
target_position = Vector2(-11, 0)
collision_mask = 4
hit_from_inside = true

[node name="BlockCheckDown" type="RayCast2D" parent="."]
target_position = Vector2(0, 9)
collision_mask = 4

[node name="NavObs2D" type="NavigationObstacle2D" parent="."]
visible = false
radius = 5.0
vertices = PackedVector2Array(6, -6, 6, 6, -6, 6, -6, -6)
avoidance_layers = 4

[connection signal="timeout" from="PushTimer" to="." method="_on_block_push_timer_timeout"]
[connection signal="timeout" from="ConfirmPushTimer" to="." method="_on_confirm_push_timer_timeout"]
